# Raven

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Nest.bat  Nest.sh  README.md  Setup.ps1  xmake.lua
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  config.yml  feature-request.md
.github/workflows/: ci.yml
Engine/Source/Raven/: CMakeLists.txt
Engine/Source/Raven/Private/: Launch.cpp  Raven.cpp
Engine/Source/Raven/Private/Core/Containers/: MemoryResource.cpp
Engine/Source/Raven/Private/Core/Memory/: Memory.cpp
Engine/Source/Raven/Public/: Raven.hpp
Engine/Source/Raven/Public/Core/: Types.hpp
Engine/Source/Raven/Public/Core/Containers/: Containers.hpp  MemoryResource.hpp
Engine/Source/Raven/Public/Core/Memory/: Memory.hpp
Engine/Source/Runtime/Core/: xmake.lua
Engine/Source/Runtime/Core/Private/: RavenCore.cpp
Engine/Source/Runtime/Core/Public/: CoreAssertions.hpp  CoreCompiler.hpp  CoreMacros.hpp  CorePlatform.hpp  CoreTypes.hpp  RavenCore.hpp
Engine/Source/Runtime/Core/Test/: HashingTests.cpp  LinearAllocatorTests.cpp  MemoryTests.cpp  ResultTests.cpp
Engine/Source/Runtime/Engine/: xmake.lua
Engine/Source/Runtime/Engine/Private/: Engine.cpp  Subsystem.cpp
Engine/Source/Runtime/Engine/Public/: Engine.hpp  EngineProfilerZones.hpp  Subsystem.hpp
Engine/Source/Runtime/Launch/: xmake.lua
Engine/Source/Runtime/Platform/: xmake.lua
Scripts/: Nest.py
Scripts/Windows/: GenerateProjectFiles.ps1
Scripts/commands/: __init__.py  _tools.py  format.py  lint.py  setup.py
(+57 files in other folders)
